--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,15 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 
 flutter:
